--- a/ItensPersonagemLOL_API/appsettings.Development.json
+++ b/ItensPersonagemLOL_API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "server=localhost;port=5432;user id=postgres;password=postgres;database=ItensPersonagemLOL;"
+    "Postgres": "server=localhost;port=5432;user id=postgres;password=unidavi;database=ItensPersonagemLOL;"
   }
 }
